--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
   ga('send', 'pageview');
 
 </script>
-<script src="jquery-1.11.3.js" type="text/javascript"></script>
+<script src="jquery-1.11.3.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="aresize.js"></script>
 <script type="text/javascript" src="script.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
