--- a/newthing.html
+++ b/newthing.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<base href="../">
+<base href="">
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-<link href="contentsheet.css" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -16,10 +15,8 @@
   ga('send', 'pageview');
 
 </script>
-<script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="vtresize.js"></script>
+<script src="jquery-1.11.3.js" type="text/javascript"></script>
 <script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="vidsthreadsscript.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
 </head>
@@ -30,50 +27,19 @@
     <a href="http://ikneedata.com"><img id="titlelogo" src="assets/ikneedatav5.png"/ width="280" height="60"></a>
 	<a href="http://ikneedata.com"><div class="button"><h4>Blog</h4></div></a>
 	<a href="heatmaps/oos/falcon.html"><div class="button"><h4>Heatmaps</h4></div></a>
-    <a href="graphsgfys.html"><div class="button longbutton"><h4>Graphs & Gfys</h4></div></a>
-    <a href="vidsthreads.html"><div class="button longbutton"><h4>Vids & Threads</h4></div></a>
+   <a href="graphsgfys.html"><div class="button longbutton"><h4>Graphs & Gfys</h4></div></a>
+  <a href="vidsthreads.html"><div class="button longbutton"><h4>Vids & Threads</h4></div></a>
 	<a href="donate.html"><div class="button"><h4>Donate</h4></div></a>
 	<a href="about.html"><div class="button"><h4>About</h4></div></a>
 	<div id="socialmediaicons"><a href="http://twitter.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/twitterlogo.png)"></div></a>
 	<a href="http://facebook.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/facebooklogo.png)"></div></a></div>
-
 </div>
-<div id="pagetitle" style="background-color:#4FB994">
-<h1>Vids & Threads</h1>
-</div>
+<div id="pagetitle" style="background-color:#AC2629">
+<h1>Blog</h1></div>
 <div id="main">
 <div id="main-content">
-<div id="infographmain">
-<div id="button-container">
-<a href="vidsthreads.html"><div class="ig-button"><p>General</p></div></a>
-<a href="vidsthreads/fox.html"><div class="ig-button"><p>Fox</p></div></a>
-<a href="vidsthreads/marth.html"><div class="ig-button"><p>Marth</p></div></a>
-<a href="vidsthreads/puff.html"><div class="ig-button igselected"><p>Puff</p></div></a>
-<a href="vidsthreads/peach.html"><div class="ig-button"><p>Peach</p></div></a>
-<a href="vidsthreads/falcon.html"><div class="ig-button"><p>Falcon</p></div></a>
-<a href="vidsthreads/doc.html"><div class="ig-button"><p>Doc/Mario</p></div></a>
-<a href="vidsthreads/ganon.html"><div class="ig-button"><p>Ganon</p></div></a>
-<a href="vidsthreads/yoshi.html"><div class="ig-button"><p>Yoshi</p></div></a>
-</div>
-
-<div id="ig-content">
-  <div class="ig">
-
-  <div class="graphcontainer"  id="vid1">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/M_GtSHM6fHA?rel=0" frameborder="0" allowfullscreen></iframe></div>
-  <div class="ig-text">
-  <p><b>Meteor Cancel to Rest</b> by <span class="author">gomezisdan</span><a href="https://twitter.com/gomezisdan"><img src="assets/twittericon.png" class="authoricon"></a></p>
-  <p>The latest video of gomezisdan's youtube series, Jigglypuff Tutorials, in which Dan teaches you unexplored jigglypuff techniques. Dan presents his tutorials with superb video editing.</p>
-  <a href="https://www.youtube.com/c/jigglypufftutorials"><div class="fullsize">YT Channel</div></a>
-  </div></div>
 
 </div>
-</div>
-
-
-
-</div>
-
 
 <div id="side-container">
 	<div id="ad"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -86,7 +52,7 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script></div>
     <h2>Suggestions</h2>
-    <div id="sugboxcontainer"><!--<textarea class="suggestion-box" rows="6" placeholder="Tell me what kind of apps or infographs you want to see!"></textarea>--><div id="suggestiontext"><p>Have a suggestion of what
+    <div id="sugboxcontainer"><div id="suggestiontext"><p>Have a suggestion of what
     features to create next?
     Send a message via</p></div>
 <a href="http://www.reddit.com/message/compose/?to=schmooblidon">
@@ -96,6 +62,5 @@
 </div>
 </div>
 
-</div>
 </div></body>
 </html>
