--- a/heatmaps/oos/falconold.html
+++ b/heatmaps/oos/falconold.html
@@ -5,23 +5,19 @@
 <base href="../../">
 <link href='http://fonts.googleapis.com/css?family=Slabo+27px|Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-<link href="heatmapsheet2.css" rel="stylesheet" type="text/css">
+<link href="heatmapsheet.css" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-65409082-1', 'auto');
   ga('send', 'pageview');
-
 </script>
 <script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-<script src="jquery-ui.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="hresize2.js"></script>
+<script type="text/javascript" src="hresize.js"></script>
 <script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="hmdata.js"></script>
-<script type="text/javascript" src="heatmapscript2.js"></script>
+<script type="text/javascript" src="heatmapscript.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
 </head>
@@ -40,41 +36,57 @@
 	<a href="http://facebook.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/facebooklogo.png)"></div></a></div>
 </div>
 <div id="pagetitle" style="background-color:#5F369F">
-<h1>Heatmaps <img id="heatmapinfo" src="assets/question.png" style="height:22px; width:22px; border-radius:15px;"/><a href="heatmaps/oos/foxold.html"><div id="oldbutton">Not working? Try the old build</div></a></h1>
+<h1>Heatmaps <img id="heatmapinfo" src="assets/question.png" style="height:22px; width:22px; border-radius:15px;"/></h1>
 
 <div id="heatmapinfobox"><p>Heatmaps display the speed of all the character's attacks from a certain position. The coloured shapes represent the possible hitboxes of each attack, where the colour represents the frame that it comes out. All smash games run at 60 frames per second. Red and yellow hitboxes are very fast, but green and blue are slower.</p>
 	<p>You can toggle each attack, or each frame (colour) individually, to allow you to see only the options you want. You can also play an animation of your selected hitboxes in real game speed (60fps) to get a feel for how fast each option is.</p>
 	<p>Using the hurtbox controls, you can move around a custom opponent hurtbox to greater visualise hitbox range.</p>
-	<p>Hovering over the buttons will highlight (outlines them) the button's respective hitboxes, and hovering over (tapping on mobile) each hitbox will display info.</p>
-</div>
-</div><div id="main">
+	<p>Hovering over the buttons will highlight (darkens them) the button's respective hitboxes.</p>
+</div></div><div id="main">
 <div id="main-content">
 	<div id="control-container">
     <div id="top-controls">
     	<div class="noa control nohelp" id="heatmaptype"><p>OoS</p>
         <div id="hmtypedropdown" class="dropdown" style="display:none"><div class="noa control hmtype nohelp">Coming Soon</div></div></div>
-		<div class="noa control nohelp" id="characterbutton"><p>Fox</p>
+		<div class="noa control nohelp" id="characterbutton"><p>
+Falcon</p>
 <div id="chardropdown" class="dropdown" style="display:none">
-	<a href="heatmaps/oos/fox.html"><div class="noa control character nohelp"><p>Fox</p></div></a>
-	<a href="heatmaps/oos/falco.html"><div class="noa control character nohelp"><p>Falco</p></div></a>
-	<a href="heatmaps/oos/marth.html"><div class="noa control character nohelp"><p>Marth</p></div></a>
-	<a href="heatmaps/oos/sheik.html"><div class="noa control character nohelp"><p>Sheik</p></div></a>
-	<a href="heatmaps/oos/puff.html"><div class="noa control character nohelp"><p>Puff</p></div></a>
-	<a href="heatmaps/oos/peach.html"><div class="noa control character nohelp"><p>Peach</p></div></a>
-	<a href="heatmaps/oos/ics.html"><div class="noa control character nohelp"><p>ICs</p></div></a>
-	<a href="heatmaps/oos/falcon.html"><div class="noa control character nohelp"><p>Falcon</p></div></a>
+	<a href="heatmaps/oos/foxold.html"><div class="noa control character nohelp"><p>Fox</p></div></a>
+	<a href="heatmaps/oos/falcoold.html"><div class="noa control character nohelp"><p>Falco</p></div></a>
+	<a href="heatmaps/oos/marthold.html"><div class="noa control character nohelp"><p>Marth</p></div></a>
+	<a href="heatmaps/oos/sheikold.html"><div class="noa control character nohelp"><p>Sheik</p></div></a>
+	<a href="heatmaps/oos/puffold.html"><div class="noa control character nohelp"><p>Puff</p></div></a>
+	<a href="heatmaps/oos/peachold.html"><div class="noa control character nohelp"><p>Peach</p></div></a>
+	<a href="heatmaps/oos/icsold.html"><div class="noa control character nohelp"><p>ICs</p></div></a>
+	<a href="heatmaps/oos/falconold.html"><div class="noa control character nohelp"><p>Falcon</p></div></a>
 </div>
 
 </div>
 		<div class="attackall nohelp"><div id="allattcontainer"><div id="allattackon2" class="allatt noa control">All On</div><div id="allattackoff2" class="allatt noa control">All Off</div></div><div class="framecircle" id="fc0"><p>F</p></div></div>
-		<div id="attack1" class="attack control"><p>Shine</p><div class="framecircle" id="fc1"><p>F</p></div></div>
-		<div id="attack2" class="attack control"><p>Grab</p><div class="framecircle" id="fc2"><p>F</p></div></div>
-		<div id="attack3" class="attack control"><p>Bair</p><div class="framecircle" id="fc3"><p>F</p></div></div>
-        <div id="attack4" class="attack control"><p>Nair</p><div class="framecircle" id="fc4"><p>F</p></div></div>
-		<div id="attack5" class="attack control"><p>Dair</p><div class="framecircle" id="fc5"><p>F</p></div></div>
-		<div id="attack6" class="attack control"><p>Upsmash</p><div class="framecircle" id="fc6"><p>F</p></div></div>
-        <div id="attack7" class="attack control"><p>Fair</p><div class="framecircle" id="fc7"><p>F</p></div></div>
-        <div id="attack8" class="attack control"><p>Upair</p><div class="framecircle" id="fc8"><p>F</p></div></div>
+		<div id="attack1" class="attack control"><p>Grab</p><div class="framecircle" id="fc1"><p>F</p></div></div>
+		<div id="attack2" class="attack control"><p>Upair</p><div class="framecircle" id="fc2"><p>F</p></div></div>
+		<div id="attack3" class="attack control"><p>Nair</p><div class="framecircle" id="fc3"><p>F</p></div></div>
+        <div id="attack4" class="attack control"><p>Bair</p><div class="framecircle" id="fc4"><p>F</p></div></div>
+		<div id="attack5" class="attack control"><p>Up-b</p><div class="framecircle" id="fc5"><p>F</p></div></div>
+        <div id="attack6" class="attack control"><p>Knee</p><div class="framecircle" id="fc6"><p>F</p></div></div>
+        <div id="attack7" class="attack control"><p>Dair</p><div class="framecircle" id="fc7"><p>F</p></div></div>
+				<div id="hurtboxcontrol">Hurtbox control
+					<div id="hurtchar" class="noa control hurtboxchar nohelp"><p id="hurtcurrent">Falcon</p><div id="hurtchardropdown">
+						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Fox</p></div>
+						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Falco</p></div>
+						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Marth</p></div>
+						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Sheik</p></div>
+						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Puff</p></div>
+						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Peach</p></div>
+						<div class="noa control hurtboxchar hbcharselect nohelp"><p>ICs</p></div>
+						<div class="noa control hurtboxchar hbcharselect nohelp"><p>Falcon</p></div>
+						</div></div>
+						<div id="position" class="hurtboxcontrols noa control">crouch</div><div id="flip" class="hurtboxcontrols noa control"><p>flip</p></div>
+					<div id="hbleft" class="hurtboxcontrols noa control"></div><div id="hbright" class="hurtboxcontrols noa control"></div></div>
+				<a href="http://imgur.com/a/9SqqU"><div id="img-button" class="noa control"><p>
+Image Version</p></div></a>
+				<div id="hbhlbutton" class="noa control"><p>
+Turn highlight <span id="hbhlonoff">Off</span></p></div>
 
 		<div id="control-speed">
 		<div id="play-button" class="noa control play"></div>
@@ -91,33 +103,40 @@ x1</p></div>
 
   <div id="imgandframecontainer">
 	<div id="img-container">
-		<img id="base" src="assets/heatmaps/fox/base.png"/>
+		<img id="base" src="assets/heatmaps/falcon/base.png"/>
         <img id="ready" src="assets/heatmaps/ready.png"/>
         <img id="go" src="assets/heatmaps/go.png"/>
-        <svg version="1.1" id="hitboxsvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1280px" height="720px"
-  	  viewBox="0 0 1280 720" enable-background="new 0 0 1280 720" xml:space="preserve" style="position:absolute">
+				<img class="a7 f20 hitbox" id="a7f20" src="assets/heatmaps/falcon/dair20.png"/>
+				<img class="a6 f20 hitbox" id="a6f20" src="assets/heatmaps/falcon/knee20.png"/>
+				<img class="a4 f20 hitbox" id="a4f20" src="assets/heatmaps/falcon/bair20.png"/>
+				<img class="a6 f19 hitbox" id="a6f19" src="assets/heatmaps/falcon/knee19.png"/>
+				<img class="a4 f19 hitbox" id="a4f19" src="assets/heatmaps/falcon/bair19.png"/>
+				<img class="a6 f18 hitbox" id="a6f18" src="assets/heatmaps/falcon/knee18.png"/>
+				<img class="a4 f18 hitbox" id="a4f18" src="assets/heatmaps/falcon/bair18.png"/>
+				<img class="a4 f17 hitbox" id="a4f17" src="assets/heatmaps/falcon/bair17.png"/>
+				<img class="a2 f17 hitbox" id="a2f17" src="assets/heatmaps/falcon/upair17.png"/>
+				<img class="a4 f16 hitbox" id="a4f16" src="assets/heatmaps/falcon/bair16.png"/>
+				<img class="a3 f16 hitbox" id="a3f16" src="assets/heatmaps/falcon/nair16.png"/>
+				<img class="a2 f16 hitbox" id="a2f16" src="assets/heatmaps/falcon/upair16.png"/>
+				<img class="a4 f15 hitbox" id="a4f15" src="assets/heatmaps/falcon/bair15.png"/>
+				<img class="a3 f15 hitbox" id="a3f15" src="assets/heatmaps/falcon/nair15.png"/>
+				<img class="a2 f15 hitbox" id="a2f15" src="assets/heatmaps/falcon/upair15.png"/>
+        <img class="a5 f14 hitbox" id="a5f14" src="assets/heatmaps/falcon/upb14.png"/>
+        <img class="a4 f14 hitbox" id="a4f14" src="assets/heatmaps/falcon/bair14.png"/>
+				<img class="a3 f14 hitbox" id="a3f14" src="assets/heatmaps/falcon/nair14.png"/>
+				<img class="a2 f14 hitbox" id="a2f14" src="assets/heatmaps/falcon/upair14.png"/>
+				<img class="a3 f13 hitbox" id="a3f13" src="assets/heatmaps/falcon/nair13.png"/>
+				<img class="a2 f13 hitbox" id="a2f13" src="assets/heatmaps/falcon/upair13.png"/>
+				<img class="a3 f12 hitbox" id="a3f12" src="assets/heatmaps/falcon/nair12.png"/>
+				<img class="a2 f12 hitbox" id="a2f12" src="assets/heatmaps/falcon/upair12.png"/>
+        <img class="a3 f11 hitbox" id="a3f11" src="assets/heatmaps/falcon/nair11.png"/>
+				<img class="a2 f11 hitbox" id="a2f11" src="assets/heatmaps/falcon/upair11.png"/>
+        <img class="a2 f10 hitbox" id="a2f10" src="assets/heatmaps/falcon/upair10.png"/>
 
-    </svg>
-    <div id="framenumbers"></div>
-		<img id="shield" src="assets/heatmaps/fox/shield.png"/>
-		<div id="hurtboxcontainer"><img id="hurtbox" src="assets/heatmaps/hurtboxes/falconstand.png"/></div>
-    <svg version="1.1" id="hitboxsvg-t" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1280px" height="720px"
-    viewBox="0 0 1280 720" enable-background="new 0 0 1280 720" xml:space="preserve" style="position:absolute;z-index:200">
+		<img class="a1 f7 hitbox" id="a1f7" src="assets/heatmaps/falcon/grab7.png"/>
 
-  </svg>
-  <div id="imgurbox" class="imgurhighlight"><a href="http://imgur.com/a/9SqqU"><img id="imgur" src="assets/heatmaps/imgurlogo.png"/></a></div>
-  <div id="hurtcontrolbox"><!--<div id="hbleft" class="hbdirection hbcon"></div>--><div id="hurtboxmidcontrols"><div id="hurtchar" class="hbcon"><span id="hurtcurrent">Falcon</span><div id="hurtchardropdown" style="display:none">
-    <div class="hbcharselect hbcon"><p>Fox</p></div>
-    <div class="hbcharselect hbcon"><p>Falco</p></div>
-    <div class="hbcharselect hbcon"><p>Marth</p></div>
-    <div class="hbcharselect hbcon"><p>Sheik</p></div>
-    <div class="hbcharselect hbcon"><p>Puff</p></div>
-    <div class="hbcharselect hbcon"><p>Peach</p></div>
-    <div class="hbcharselect hbcon"><p>ICs</p></div>
-    <div class="hbcharselect hbcon"><p>Falcon</p></div>
-  </div></div><div id="position" class="hbcon">crouch</div><div id="flip" class="hbcon">flip</div></div><!--<div id="hbright" class="hbdirection hbcon"></div>--></div>
-  <div id="draghurtcontainer"><div id="draghurt" class="hbcon"></div></div>
-
+		<img id="shield" src="assets/heatmaps/falcon/shield.png"/>
+		<div id="hurtboxcontainer"><img id="hurtbox" src="assets/heatmaps/hurtboxes/falconstand.png" style="margin-left:75%"/></div>
 	</div>
     <div id="framecontainer">
 			<div id="frameselect">Frame control: <span id="fsid">ALL</span></div>
