--- a/calculator.html
+++ b/calculator.html
@@ -85,6 +85,8 @@
   <div id="victim-position"><div id="posButtonTitle"><p>Hit Direction</p></div><div id="posButtonLeft" class="posButton"></div><div id="posButtonRight" class="posButton posButtonSelected"></div></div>
   <div id="victim-char"><p id="victimcharname">Fox</p></div>
   <div id="percent"><div id="percentNumber"><textarea id="percentNumberEdit" type="number" maxlength="3">80</textarea><p>%</p></div><div id="percentButtonContainer"><div id="percentPlus" class="percentButton"><p>+</p></div><div id="percentMinus" class="percentButton"><p>-</p></div></div></div>
+	<div id="percentPrecise"><p id="pPp1"><span id="percentPreciseWhole">80</span>.</p><textarea id="percentPreciseEdit" type="number" maxlength="5">00000</textarea><p id="pPp2">%</p></div>
+	<div id="percentPreciseToggle" class="percentPreciseToggleDefault"><p>Use Fractionals</p><div id="percentPreciseIcon" class="percentPreciseIconExpand"></div></div>
 	<div id="diSwitchContainer"><div id="diSwitchButton"><p>></p></div></div>
 	<div id="tdiBox"><div id="tdiTitle"><p><span id="dismalltext">Trajectory </span>DI</p></div><div id="tdiSwitch" class="diSwitch"><p>Simple</p></div><div id="tdiSelector" class="diSelector"><div class="trajFreeze diFreeze freezeOff"></div>
 		<div id="tdiCircle"></div>
