--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,7 @@
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 <link href="contentsheet.css" rel="stylesheet" type="text/css">
 <link href="calculatorsheet.css" rel="stylesheet" type="text/css">
-<!--<script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -18,7 +18,7 @@
   ga('create', 'UA-65409082-1', 'auto');
   ga('send', 'pageview');
 
-</script>-->
+</script>
 <script src="jquery-1.11.3.min.js" type="text/javascript"></script>
 <script src="jquery-ui.min.js" type="text/javascript"></script>
 <script src="perfect-scrollbar.jquery.min.js"></script>
