--- a/timeline.html
+++ b/timeline.html
@@ -5,12 +5,12 @@
 <base href="">
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-<link href="newthingsheet.css" rel="stylesheet" type="text/css">
+<link href="timelinesheet.css" rel="stylesheet" type="text/css">
 
 <script src="jquery-1.11.3.js" type="text/javascript"></script>
 <script src="jquery-ui.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="tresize.js"></script>
-<script type="text/javascript" src="newthingscript.js"></script>
+<script type="text/javascript" src="timeline.js"></script>
 <script type="text/javascript" src="script.js"></script>
 
 
@@ -32,7 +32,7 @@
 	<a href="http://facebook.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/facebooklogo.png)"></div></a></div>
 </div>
 <div id="pagetitle" style="background-color:#1d39b3">
-<h1>Timelines</h1></div>
+<h1>Timelines</h1><div id="debug"></div></div>
 <div id="main">
 <div id="main-content">
 <div id="maincontrols">
@@ -104,6 +104,36 @@
 	<option value="28">28</option>
 	<option value="29">29</option>
 	<option value="30">30</option>
+	<option value="31">31</option>
+	<option value="32">32</option>
+	<option value="33">33</option>
+	<option value="34">34</option>
+	<option value="35">35</option>
+	<option value="36">36</option>
+	<option value="37">37</option>
+	<option value="38">38</option>
+	<option value="39">39</option>
+	<option value="40">40</option>
+	<option value="41">41</option>
+	<option value="42">42</option>
+	<option value="43">43</option>
+	<option value="44">44</option>
+	<option value="45">45</option>
+	<option value="46">46</option>
+	<option value="47">47</option>
+	<option value="48">48</option>
+	<option value="49">49</option>
+	<option value="50">50</option>
+	<option value="51">51</option>
+	<option value="52">52</option>
+	<option value="53">53</option>
+	<option value="54">54</option>
+	<option value="55">55</option>
+	<option value="56">56</option>
+	<option value="57">57</option>
+	<option value="58">58</option>
+	<option value="59">59</option>
+	<option value="60">60</option>
 	</select>
 	</form>
 	<div id="createbutton" class="editbutton"><p>Create</p></div>
